--- a/school_locator_dialog_base.ui
+++ b/school_locator_dialog_base.ui
@@ -1,94 +1,126 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>SchoolLocatorDialogBase</class>
- <widget class="QDialog" name="SchoolLocatorDialogBase">
-  <property name="geometry">
-   <rect>
-    <x>0</x>
-    <y>0</y>
-    <width>400</width>
-    <height>300</height>
-   </rect>
-  </property>
+ <class>SchoolLocatorDialog</class>
+ <widget class="QWidget" name="SchoolLocatorDialog">
   <property name="windowTitle">
-   <string>school_locator</string>
+   <string>School Locator</string>
   </property>
-  <widget class="QDialogButtonBox" name="button_box">
-   <property name="geometry">
-    <rect>
-     <x>30</x>
-     <y>240</y>
-     <width>341</width>
-     <height>32</height>
-    </rect>
-   </property>
-   <property name="orientation">
-    <enum>Qt::Horizontal</enum>
-   </property>
-   <property name="standardButtons">
-    <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="pushButton">
-   <property name="geometry">
-    <rect>
-     <x>60</x>
-     <y>50</y>
-     <width>75</width>
-     <height>23</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>PushButton</string>
-   </property>
-  </widget>
-  <widget class="QRadioButton" name="radioButton">
-   <property name="geometry">
-    <rect>
-     <x>60</x>
-     <y>110</y>
-     <width>82</width>
-     <height>17</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>RadioButton</string>
-   </property>
-  </widget>
+  <layout class="QVBoxLayout" name="verticalLayout">
+   <item>
+    <widget class="QGroupBox" name="groupBoxInputs">
+     <property name="title">
+      <string>Input Layers</string>
+     </property>
+     <layout class="QFormLayout" name="formLayoutInputs">
+      <item row="0" column="0">
+       <widget class="QLabel" name="labelPopulationLayer">
+        <property name="text">
+         <string>Population Data:</string>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="1">
+       <widget class="QComboBox" name="combo_population_layer"/>
+      </item>
+      <item row="1" column="0">
+       <widget class="QLabel" name="labelSchoolLayer">
+        <property name="text">
+         <string>Existing Schools:</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="1">
+       <widget class="QComboBox" name="combo_school_layer"/>
+      </item>
+      <item row="2" column="0">
+       <widget class="QLabel" name="labelLandUseLayer">
+        <property name="text">
+         <string>Land Use/Zoning:</string>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="1">
+       <widget class="QComboBox" name="combo_land_use_layer"/>
+      </item>
+      <item row="3" column="0">
+       <widget class="QLabel" name="labelAreaLayer">
+        <property name="text">
+         <string>Area Boundary:</string>
+        </property>
+       </widget>
+      </item>
+      <item row="3" column="1">
+       <widget class="QComboBox" name="combo_area_layer"/>
+      </item>
+     </layout>
+    </widget>
+   </item>
+   <item>
+    <widget class="QGroupBox" name="groupBoxParameters">
+     <property name="title">
+      <string>Parameters</string>
+     </property>
+     <layout class="QFormLayout" name="formLayoutParameters">
+      <item row="0" column="0">
+       <widget class="QLabel" name="labelPopulationThreshold">
+        <property name="text">
+         <string>Population Threshold:</string>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="1">
+       <widget class="QSpinBox" name="spin_population_threshold"/>
+      </item>
+      <item row="1" column="0">
+       <widget class="QLabel" name="labelDistanceFromSchools">
+        <property name="text">
+         <string>Max Distance from Schools:</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="1">
+       <widget class="QDoubleSpinBox" name="spin_distance_from_schools"/>
+      </item>
+      <item row="2" column="0">
+       <widget class="QLabel" name="labelRestrictedZoneBuffer">
+        <property name="text">
+         <string>Restricted Zone Buffer:</string>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="1">
+       <widget class="QDoubleSpinBox" name="spin_restricted_zone_buffer"/>
+      </item>
+     </layout>
+    </widget>
+   </item>
+   <item>
+    <layout class="QHBoxLayout" name="horizontalLayoutButtons">
+     <item>
+      <widget class="QPushButton" name="btn_run_analysis">
+       <property name="text">
+        <string>Run Analysis</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="btn_close">
+       <property name="text">
+        <string>Close</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </item>
+   <item>
+    <widget class="QLabel" name="lbl_status_message">
+     <property name="text">
+      <string>Status: Ready</string>
+     </property>
+    </widget>
+   </item>
+  </layout>
  </widget>
  <resources/>
- <connections>
-  <connection>
-   <sender>button_box</sender>
-   <signal>accepted()</signal>
-   <receiver>SchoolLocatorDialogBase</receiver>
-   <slot>accept()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>20</x>
-     <y>20</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>20</x>
-     <y>20</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>button_box</sender>
-   <signal>rejected()</signal>
-   <receiver>SchoolLocatorDialogBase</receiver>
-   <slot>reject()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>20</x>
-     <y>20</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>20</x>
-     <y>20</y>
-    </hint>
-   </hints>
-  </connection>
- </connections>
+ <connections/>
 </ui>
